--- a/TiendApp/app/src/main/res/values/strings.xml
+++ b/TiendApp/app/src/main/res/values/strings.xml
@@ -1,9 +1,22 @@
 <resources>
+
     <string name="app_name">TiendApp</string>
+
     <string name="filter_action">Filtrar</string>
     <string name="sort_action">Ordenar</string>
     <string name="more_action">Más</string>
     <string name="search_action">Buscar</string>
+
+    <!-- Navigation Drawer Stuff -->
+    <string name="drawer_open">open</string>
+    <string name="drawer_close">close</string>
+    <string name="drawer_option_home">Inicio</string>
+    <string name="drawer_option_men">Hombres</string>
+    <string name="drawer_option_women">Mujeres</string>
+    <string name="drawer_option_kids">Infantiles</string>
+    <string name="drawer_option_babies">Bebes</string>
+
+
     <string name="title_activity_catalogue">catalogue</string>
 
 </resources>
