--- a/TiendApp/app/src/main/res/values/strings.xml
+++ b/TiendApp/app/src/main/res/values/strings.xml
@@ -16,6 +16,13 @@
     <string name="drawer_option_kids">Infantiles</string>
     <string name="drawer_option_babies">Bebes</string>
 
+    <!-- Alarm management -->
+    <string name="set_single_alarm">Set Single Alarm</string>
+    <string name="set_repeating_alarm">Set Repeating Alarm</string>
+    <string name="set_inexact_repeating_alarm">Set Inexact Repeating Alarm</string>
+    <string name="cancel_repeating_alarm">Cancel Repeating Alarm</string>
+
+
 
     <string name="title_activity_catalogue">catalogue</string>
 
