--- a/TiendApp/app/src/main/res/values/strings.xml
+++ b/TiendApp/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="drawer_option_women">Mujeres</string>
     <string name="drawer_option_kids">Infantiles</string>
     <string name="drawer_option_babies">Bebes</string>
-
+    <string name="drawer_option_orders">Mis pedidos</string>
 
     <string name="title_activity_catalogue">catalogue</string>
 
