--- a/TiendApp/app/src/main/res/values/strings.xml
+++ b/TiendApp/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="sort_action">Ordenar</string>
     <string name="more_action">Más</string>
     <string name="search_action">Buscar</string>
+    <string name="search_hint">Busca</string>
+    <string name="search_result">Resultados</string>
+
 
     <!-- Navigation Drawer Stuff -->
     <string name="drawer_open">open</string>
