--- a/TiendApp/app/src/main/res/values-en/strings.xml
+++ b/TiendApp/app/src/main/res/values-en/strings.xml
@@ -2,12 +2,12 @@
 
     <string name="app_name">TiendApp</string>
 
-    <string name="filter_action">Filtrar</string>
-    <string name="sort_action">Ordenar</string>
-    <string name="more_action">Más</string>
-    <string name="search_action">Buscar</string>
-    <string name="search_hint">Buscar...</string>
-    <string name="search_result">Resultados</string>
+    <string name="filter_action">Filter</string>
+    <string name="sort_action">Sort</string>
+    <string name="more_action">More</string>
+    <string name="search_action">Search</string>
+    <string name="search_hint">Search...</string>
+    <string name="search_result">Results</string>
 
 
     <!-- Navigation Drawer Stuff -->
