--- a/TiendApp/app/src/main/res/values-en/strings.xml
+++ b/TiendApp/app/src/main/res/values-en/strings.xml
@@ -2,6 +2,7 @@
 
     <string name="app_name">TiendApp</string>
 
+    <!-- Menu / Actionbar items -->
     <string name="filter_action">Filter</string>
     <string name="sort_action">Sort</string>
     <string name="more_action">More</string>
@@ -18,6 +19,8 @@
     <string name="drawer_option_women">Women</string>
     <string name="drawer_option_kids">Children</string>
     <string name="drawer_option_babies">Babies</string>
+    <string name="drawer_option_orders">My orders</string>
+    <string name="drawer_option_settings">Settings</string>
 
 
     <!-- Categories Fixed Tabs Stuff -->
@@ -50,7 +53,7 @@
     <string name="cancel_repeating_alarm">Cancel Repeating Alarm</string>
 
 
-    <string name="drawer_option_orders">My orders</string>
+    <!-- Catalogue -->
     <string name="title_activity_catalogue">Catalogue</string>
 
 
@@ -58,5 +61,7 @@
     <string name="btn_en">English</string>
     <string name="btn_es">Spanish</string>
     <string name="hello_world">Hello</string>
+    <string name="languages">Languages</string>
+    <string name="settings">Settings</string>
 
 </resources>
