--- a/TiendApp/app/src/main/res/values-en/strings.xml
+++ b/TiendApp/app/src/main/res/values-en/strings.xml
@@ -5,7 +5,12 @@
     <!-- Menu / Actionbar items -->
     <string name="filter_action">Filter</string>
     <string name="sort_action">Sort</string>
-    <string name="more_action">More</string>
+
+    <string name="list_view_action">List</string>
+    <string name="grid_view_action">Grid</string>
+
+
+
     <string name="search_action">Search</string>
     <string name="search_hint">Search...</string>
     <string name="search_result">Results</string>
@@ -63,5 +68,7 @@
     <string name="hello_world">Hello</string>
     <string name="languages">Languages</string>
     <string name="settings">Settings</string>
+
+    <string name="loading_message">Loading</string>
 
 </resources>
