--- a/TiendApp/app/src/main/res/values/strings.xml
+++ b/TiendApp/app/src/main/res/values/strings.xml
@@ -90,7 +90,7 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Correo</string>
-    <string name="prompt_password">Contraseña (opcional)</string>
+    <string name="prompt_password">Contraseña</string>
     <string name="action_sign_in">Ingresar</string>
     <string name="action_sign_in_short">Ingresar</string>
     <string name="error_invalid_email">Correo invalido</string>
@@ -98,9 +98,7 @@
     <string name="error_incorrect_password">Contraseña incorrecto</string>
     <string name="error_field_required">Campo requerido</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
-
+        completions."</string>
 
 
 
