--- a/TiendApp/app/src/main/res/values-en/strings.xml
+++ b/TiendApp/app/src/main/res/values-en/strings.xml
@@ -90,9 +90,13 @@
     <string name="languages">Languages</string>
     <string name="settings">Settings</string>
 
+    <!-- Util Stuff -->
     <string name="loading_message">Loading</string>
 
+
+
     <!-- Strings related to login -->
+    <string name="title_activity_login">Sign in</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -102,7 +106,20 @@
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+        completions."</string>
+
+    <!-- Cart -->
+    <string name="title_activity_carrito">Cart</string>
+    <string name="payment">Payment</string>
+    <string name="payment_card">Visa</string>
+    <string name="payment_card_nr">XXXX-XXXX-XXXX-1234</string>
+    <string name="valid_to">Expiration: 09-18</string>
+    <string name="products_cart">Products</string>
+    <string name="prod_title1">prod_title1</string>
+    <string name="number_of_items1">number_of_items1</string>
+    <string name="price_cart1">price_cart1</string>
+    <string name="prod_title2">prod_title2</string>
+    <string name="number_of_items2">number_of_items2</string>
+    <string name="price_cart2">price_cart2</string>
 
 </resources>
