--- a/TiendApp/app/src/main/res/values-en/strings.xml
+++ b/TiendApp/app/src/main/res/values-en/strings.xml
@@ -2,6 +2,11 @@
 
     <string name="app_name">TiendApp</string>
 
+
+    <!--Home -->
+    <string name="btn_see_more">See more</string>
+
+
     <!-- Menu / Actionbar items -->
     <string name="filter_action">Filter</string>
     <string name="sort_action">Sort</string>
