--- a/TiendApp/app/src/main/res/values-en/strings.xml
+++ b/TiendApp/app/src/main/res/values-en/strings.xml
@@ -23,6 +23,8 @@
     <string name="drawer_option_babies">Babies</string>
     <string name="drawer_option_orders">My orders</string>
     <string name="drawer_option_settings">Settings</string>
+    <string name="drawer_option_login">Log-In</string>
+    <string name="drawer_option_logout">Log-Out</string>
 
 
     <!-- Categories Fixed Tabs Stuff -->
@@ -86,6 +88,7 @@
     <string name="order_confirmed">Confirmada</string>
     <string name="order_shiped">Despachada</string>
     <string name="order_delivered">Entregada</string>
+    <string name="must_login">You Must Login to see your Orders</string>
 
 
     <!-- Alarm management -->
@@ -131,15 +134,15 @@
 
     <!-- Strings related to login -->
     <string name="title_activity_login">Sign in</string>
-    <string name="prompt_email">Email</string>
+    <string name="prompt_email">User</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_email">Invalid Username</string>
     <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_incorrect_password">Invalid Password</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
+    <string name="permission_rationale">"Contacts permissions are needed for providing user names
         completions."</string>
 
 
