--- a/TiendApp/app/src/main/res/values/strings.xml
+++ b/TiendApp/app/src/main/res/values/strings.xml
@@ -96,6 +96,10 @@
     <string name="order_delivered">Entregada</string>
     <string name="must_login">Debe iniciar sesión para ver sus ordenes</string>
 
+    <string name="no_disponible">No Disponible</string>
+    <string name="added_to_cart">Agregado al Carrito</string>
+    <string name="added_to_favorites">Agregado a Favoritos</string>
+
 
     
 
